fix: improve appearance in dark mode
fixup

--- a/assets/style.css
+++ b/assets/style.css
@@ -22,3 +22,24 @@ body {
   padding-left: 4px;
   padding-right: 4px;
 }
+
+.vscode-dark :not(.markmap-fold) > circle {
+  fill: #444;
+}
+
+.vscode-dark .mm-toolbar {
+  background: #222;
+  border-color: #444;
+}
+
+.vscode-dark .mm-toolbar:hover {
+  border-color: #666;
+}
+
+.vscode-dark .mm-toolbar > *:hover {
+  background-color: #444;
+}
+
+.vscode-dark .mm-toolbar > *:hover > * {
+  color: #bbb;
+}
